--- a/styles.css
+++ b/styles.css
@@ -12,4 +12,7 @@ body {
     nav ul {
       list-style-type: none;
       margin: 0;
+      padding: 0;
+      background-color: #f1f1f1;
+      overflow: hidden;
     }
