--- a/styles.css
+++ b/styles.css
@@ -22,4 +22,7 @@ body {
     nav li a {
       display: block;
       color:brown;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
     }
