--- a/styles.css
+++ b/styles.css
@@ -3,29 +3,9 @@ body {
     margin: 0;
     padding: 0;
   }
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      background-color: #f1f1f1;
-      overflow: hidden;
-    }
-    nav li {
-      float: left;
-    }
-    nav li a {
-      display: block;
-      color:brown;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
-    nav li a:hover {
-      background-color: #ddd;
-    }
+  header.main {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+  }
+  
