--- a/styles.css
+++ b/styles.css
@@ -16,5 +16,8 @@ body {
     color: #333;
     text-decoration: none;
     margin-right: 10px;
- 
+  }
+  .code-legend {
+    background-color: #f5f5f5;
+    
   }
