--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,9 @@ body {
       #navbar ul {
         display: flex;
         flex-direction: column;
-
       }
+    }
+    .nav-link {
+      margin: 5px 0;
     }
 
